--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,4 +6,4 @@ phases:
             dotnet: 3.1
     build:
         commands:
-            - dotnet build -c Release ./Blazor.EventPlanner/Blazor.EventPlanner.csproj
+            - dotnet build -c Release ./Blazor.EventPlanner.csproj
