--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,3 +16,5 @@ artifacts:
         artifactIdentifier:
             files: 
                 - deployfolder/*
+            name:
+                BuildTestArtifact
