--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,13 +8,11 @@ phases:
         commands:
             - dotnet build -c Release ./Blazor.EventPlanner.csproj
             - dotnet publish -o deployfolder
+            - cd deployfolder
+            - zip ../site.zip *
+            - cd ..
+            - zip blazortest.zip site.zip aws-windows-deployment-manifest.json
             
 artifacts:
     files:
-        - deployfolder/*
-    secondary-artifacts:
-        artifact1:
-            files: 
-                - deployfolder/*
-            name:
-                BuildTestArtifact
+        - blazortest.zip
