--- a/aws-windows-deployment-manifest.json
+++ b/aws-windows-deployment-manifest.json
@@ -5,7 +5,7 @@
         {
             "name": "test-dotnet-core",
             "parameters": {
-                "appBundle": "site.zip",
+                "appBundle": "deployfolder",
                 "iisPath": "/",
                 "iisWebSite": "Default Web Site"
             }
